--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@
       'Lucida Sans', Arial, sans-serif;
   }
 
+
+  body {
+   background: url(./Pictures/file\ 2.png); no-repeat;
+   justify-content: center;
+   align-items: center;
+   min-height: 100vh;
+   background-size: cover;
+   background-position: center;
+   
+}
+
 header {
     position: fixed;
     top: 0;
@@ -36,14 +47,13 @@ header {
   
   nav {
     height: 80px;
-    background: #ffffff;
+    background: #40a8ee;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0rem calc((100vw - 1300px) / 2);
   }
   
- 
   
   nav a {
     text-decoration: none;
@@ -52,17 +62,17 @@ header {
   }
   
 .nav-item .btnlogin-popup {
-width: 130px;
-height: 50px;
-background: transparent;
-border: 2px solid #fff;
-outline: none;
-border-radius: 6px;
-cursor: pointer;
-font-size: 1.1em;
-color: #fff;
-font-weight: 500;
-margin-left: 40px;
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #fff;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #fff;
+    font-weight: 500;
+    margin-left: 40px;
 
 }
 
@@ -70,30 +80,16 @@ margin-left: 40px;
     color: #f13737;
   }
   
-  .hero {
-    background: #60baee;
-  }
-  
-  .hero-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 95vh;
-    padding: 3rem calc((100vw - 1300px) / 2);
-  }
-  
+
   .column-left {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     color: #000000;
     padding: 0rem 2rem;
   }
   
-  .column-left h1 {
-    margin-bottom: 1rem;
-    font-size: 3rem;
-  }
   
   .column-left p {
     margin-bottom: 2rem;
@@ -101,7 +97,7 @@ margin-left: 40px;
     line-height: 1.5;
   }
   
-  button {
+   button {
     padding: 1rem 3rem;
     font-size: 1rem;
     border: none;
@@ -116,23 +112,7 @@ margin-left: 40px;
     color: #ffffff;
   }
   
-  .column-right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0rem 2rem;
-  }
-  
-  .hero-image {
-    width: 100%;
-    height: 100%;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .hero-container {
-      grid-template-columns: 1fr;
-    }
-  }
+ 
 
   .wrapper {
     position: relative;
