--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
 body {
    /* background: #081b29; */
     color: #ededed;
@@ -41,8 +42,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: .4s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
 }
 
 .navbar a {
@@ -60,6 +61,7 @@ body {
 
 .home {
     height: 100vh;
+    width: 100%;
     background: url(./BIlde1.png) no-repeat;
     background-size: cover;
     background-position: center;
@@ -88,8 +90,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 1s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
 }
 
 .home-content h3 {
@@ -107,8 +109,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 1.3s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
 }
 
 .home-content p {
@@ -125,8 +127,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 1.6s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
 }
 
 .home-content .btn-box {
@@ -146,8 +148,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 1.9s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
     z-index: 2;
 }
 
@@ -168,7 +170,7 @@ body {
     letter-spacing: 1px;
     z-index: 1;
     overflow: hidden;
-    transition: .5s;
+    transition: 0s;
 }
 
 .btn-box a:hover {
@@ -197,7 +199,7 @@ body {
     height: 100%;
     background: #081b29;
     z-index: -1;
-    transition: .5s;
+    transition: 0s;
 }
 
 .btn-box a:hover::before {
@@ -221,8 +223,8 @@ body {
     width: 100%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 2.5s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
     z-index: 2;
 }
 
@@ -241,7 +243,7 @@ body {
     text-decoration: none;
     z-index: 1;
     overflow: hidden;
-    transition: .5s;
+    transition: 0s;
 }
 
 .home-sci a {
@@ -261,7 +263,7 @@ body {
     height: 100%;
     background: #00abf0;
     z-index: -1;
-    transition: .5s;
+    transition: 0s;
 }
 
 .home-sci a:hover::before {
@@ -277,8 +279,8 @@ body {
     background: transparent;
     /* border: 2px solid red; */
     transition: 3s;
-    animation: manipActiveHover .1s forwards;
-    animation-delay: 4s;
+    animation: manipActiveHover 0s forwards;
+    animation-delay: 0s;
     pointer-events: none;
 }
 
@@ -295,8 +297,8 @@ body {
     width: 145%;
     height: 100%;
     background: #081b29;
-    animation: showRight 1s ease forwards;
-    animation-delay: 3s;
+    animation: showRight 0s ease forwards;
+    animation-delay: 0s;
     z-index: 100;
 }
 
@@ -312,3 +314,90 @@ body {
         pointer-events: auto;
     }
 }
+
+        /* Style The Dropdown Button */
+        .dropbtn {
+            background-color: #081b29;
+            color: #ededed;
+            padding: 16px;
+            font-size: 20px;
+            font-weight: 500;
+            text-decoration: none;
+            border: none;
+            cursor: pointer;
+
+        }
+
+        /* The container <div> - needed to position the dropdown content */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        /* Dropdown Content (Hidden by Default) */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        /* Links inside the dropdown */
+        .dropdown-content a {
+            color: #fff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content a:hover {
+            background-color: #00abf0;
+        }
+
+        /* Show the dropdown menu on hover */
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        /* Change the background color of the dropdown button when the dropdown content is shown */
+        .dropdown:hover .dropbtn {
+           background-color: #00abf0; 
+        }
+
+        @media only screen and (max-width: 844px){
+
+            .home {
+                display: block;
+                width: 100%;
+                padding: 20px;
+                background-size: cover;
+                background-position: center;
+                display: flex;
+                align-items: center;
+                padding: 0 10%;
+            }
+            
+            .home-content {
+                /* background: yellowgreen; Slett */
+                padding: 20px 0px 0px;
+            }
+
+            .home-content h1 {
+                padding: 20px 0px 0px;
+
+            }
+
+            .home-content h3 {
+                padding: 20px 0px 0px;
+                
+            }
+
+            .home-content p {
+                padding: 20px 0px 0px;
+                display: none;
+            }
+
+           
+          }
